@@ -30,6 +30,9 @@ javaOptions in Universal ++= Seq(
   // -J params will be added as jvm parameters
   // This value dictates the maximum memory value.
   // The corresponding value needs to be changed in the hosting environment, i.e. GCP.
+  // 
+  //
+  "-J--add-opens", "java.base/java.lang=ALL-UNNAMED",
   "-J-Xmx4096m"
 )
 
